# realhands

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  start-mac.command  start-windows.bat
.github/workflows/: ci.yml
bridge/: __main__.py  agent_runner.py  bridge.py  chat_runner.py  chrome_for_testing.py  event_broker.py  executor_client.py  policy_setup.py  redaction.py  requirements.txt  spawn_manager.py  test_agent_runner.py  test_bridge.py  test_chat_runner.py  test_chrome_for_testing.py  test_spawn_manager.py  test_vault.py  vault.py  vault_cli.py
docs/: ARCHITECTURE.md  PLATFORMS.md
examples/: byo_key_agent.py  shot.py
extension/: background.js  content.js  manifest.json  sidepanel.css  sidepanel.html  sidepanel.js  update.xml
extension/icons/: README.md  generate_icons.py
extension/popup/: popup.css  popup.html  popup.js
vision/: requirements.txt
vision/tests/: conftest.py  test_decide.py
vision/tests/fixtures/: make_fixtures.py
vision/vision/: __init__.py  audit.py  decide.py  models.py  prompts.py  router.py
